# beads-tui

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_STYLE.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  INSTALLATION.md  Issues_View.txt  KEYBOARD_SHORTCUTS.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  RALPH-LOOP-VERIFICATION.md  README.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  Record_View.txt  SETUP_COMPLETE.md  Screen_Draw.txt  TEST_DATA.md  TEST_HARNESS.md  TEST_PLAN.md  TEST_STRATEGY.md  WORKPLAN.md  book.toml  cleanup-duplicates.py  clippy.toml  deny.toml  dev-setup.ps1  epics.txt  generate-issues.py  new-project-skill.md  output.txt  rustfmt.toml
.beads/: issues.jsonl  pollution-backup.jsonl
.claude/: ralph-loop.local.md  session-2026-01-13.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml
.github/workflows/: ci.yml  docs.yml  release.yml  scheduled-checks.yml
.serena/: project.yml
benches/: README.md  common_operations.rs  search_performance.rs
docs/: ADVANCED_FEATURES.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  FAQ.md  FILTERING.md  FILTERING_GUIDE.md  LIFECYCLE.md  PERFORMANCE_TUNING.md  README.md  SEARCH_ARCHITECTURE.md  SUMMARY.md  TEST_DATA.md  TUTORIAL.md  UI_REFERENCE.md  USER_GUIDE.md  VIEW_TESTING.md  WIDGET_DEVELOPMENT.md  WORKFLOW_EXAMPLES.md  accessibility.md  labels.md  widgets.md
docs/screenshots/: .gitkeep  README.md  update-screenshots.ps1  update-screenshots.sh
docs/tutorial_sample_data/: README.md
examples/: README.md  basic_ui.rs
scripts/: README.md  generate-fixtures.ps1  generate-fixtures.sh  test-views.ps1  test-views.sh  test.ps1  test.sh  validate-fixtures.ps1  validate-fixtures.sh  view-tour.ps1  view-tour.sh
scripts/install/: README.md  install.ps1  install.sh
src/: demo.rs  helpers.rs  lib.rs  main.rs  runtime.rs  test_mode.rs  tts.rs
src/beads/: client.rs  error.rs  mock.rs  mod.rs  models.rs  parser.rs
src/config/: keybindings.rs  mod.rs
src/graph/: layout.rs  mod.rs  renderer.rs
src/models/: app_state.rs  filter.rs  gantt_schedule.rs  issue_cache.rs  kanban_config.rs  labels.rs  mod.rs  navigation.rs  perf.rs  pert_layout.rs  table_config.rs  undo_history.rs
src/tasks/: error.rs  handle.rs  manager.rs  mod.rs  progress.rs
src/ui/: command_palette.rs  layout.rs  mod.rs  navigation.rs
src/ui/layout/: mod.rs  pane.rs  responsive.rs
src/ui/themes/: mod.rs
src/ui/views/: create_issue.rs  database_view.rs  dependencies_view.rs  dependency_graph.rs  dependency_tree.rs  description_editor.rs  event_utils.rs  gantt_view.rs  help_view.rs  issue_detail.rs  issue_editor.rs  issue_form_builder.rs  issues_view.rs  kanban_view.rs  labels_view.rs  mod.rs  pert_view.rs  search_interface.rs  view_event_handler.rs
src/ui/widgets/: autocomplete.rs  bulk_action_menu.rs  checkbox_list.rs  column_manager.rs  compact_form.rs  date_picker.rs  dependency_dialog.rs  dialog.rs  field_editor.rs  filter_bar.rs  (+26 more)
src/undo/: command.rs  issue_commands.rs  mod.rs  stack.rs
src/utils/: mod.rs  safe_regex.rs
tests/: concurrent_ops.rs  dependency_edge_cases.rs  filter_logic.rs  fuzz_interactions.rs  integration_test.rs  memory_spike.rs  property_tests.rs  ui_snapshots.rs
tests/common/: mod.rs
tests/fixtures/: fixtures.json
tests/integration/: concurrent_ops.rs  crud.rs  dependency_edge_cases.rs  filter_logic.rs  filter_state_desync.rs  fuzz_interactions.rs  main.rs  memory_spike.rs  property_tests.rs  ui_snapshots.rs  undo_redo.rs  validate_fixtures.rs
tests/snapshots/: database_view_120x40.snap  database_view_80x24.snap  help_view_120x40.snap  help_view_80x24.snap  issues_view_120x40.snap  issues_view_80x24.snap
tests/unit/: main.rs  models_test.rs  widgets_test.rs
(+10 files in other folders)
